# Bigmath-FFM

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  README.md  THIRD_PARTY_NOTICES.md  build.gradle  dependencies.gradle  gradle.properties  settings.gradle  vcpkg.json
.github/: labeler.yml  labels.yml  pr-reviewers.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: 000-bug-report.yml  001-feature-request.yml  config.yml
.github/actions/build_setup/: action.yml
.github/json/: config-latest.json  config.json
.github/scripts/: stage-native-runtime-unix.sh  stage-native-runtime-windows.ps1
.github/workflows/: auto-build.yml  build-on-push.yml  build.yml  format-java.yml  label-sync.yml  manage-pr-labels.yml  native-build.yml  performance-benchmarks.yml  pr.yml  publish-on-release.yml  publish.yml  release.yml  test-on-push.yml
bigmath-ffm-kt/: build.gradle
bigmath-ffm-kt/src/main/kotlin/com/modularmc/bigmath/: BigDeciOperators.kt  BigIntOperators.kt  Int128Operators.kt
bigmath-ffm-kt/src/main/kotlin/com/modularmc/bigmath/ffm/: BigDeciOperators.kt  BigDecimalOperators.kt  BigIntOperators.kt  Int128Operators.kt
docs/: workflow-design.md
gradle/: libs.versions.toml
gradle/scripts/: jars.gradle  publishing.gradle  resources.gradle  spotless.gradle
src/jmh/java/com/modularmc/bigmath/: BigDeciBenchmark.java  BigIntBenchmark.java  Int128Benchmark.java  JdkComparisonBenchmark.java
src/main/cpp/: CMakeLists.txt  algos.cpp  algos.h  bigdecimal.cpp  bigint.cpp  bigmath_ffm.cpp  bigmath_ffm.h  export.h  int128.cpp  int128.h  ntt.cpp  ntt.h
src/main/java/com/modularmc/bigmath/: BigDeci.java  BigInt.java  BigmathFFM.java  FunctionDescriptors.java  Int128.java
src/main/java/com/modularmc/bigmath/ffm/: BigDeci.java  BigDecimal.java  BigInt.java  BigmathFFM.java  FunctionDescriptors.java  Int128.java
src/main/java/net/modularmclib/bigmath/ffm/: BigDecimal.java  BigInt.java  BigmathFFM.java  FunctionDescriptors.java  Int128.java
src/test/java/com/modularmc/bigmath/: BigDeciTest.java  BigIntTest.java  Int128Test.java
src/test/java/com/modularmc/bigmath/ffm/: BigDeciTest.java  BigDecimalTest.java  BigIntTest.java  Int128Test.java
src/test/java/net/modularmclib/bigmath/ffm/: BigDecimalTest.java  BigIntTest.java  Int128Test.java
